<resources>
    <string name="app_name">Tourist Reviews</string>
    <string name="lbl_change_password">Please enter your new password</string>
    <string name="settigns_change_password">Change Password</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="lbl_forgot_password">Forgot password</string>
    <string name="lbl_new_message">New Message</string>
    <string name="lbl_all_reviews">All Reviews</string>
    <string name="lbl_home">Home</string>
    <string name="login">Login</string>
    <string name="change_password">Proceed to Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_verification">Email Verification</string>
    <string name="otp_instruction">Please enter the 6 digit verification code sent on your email.</string>
    <string name="lbl_verify">Verify</string>
    <string name="lbl_send_otp">Send OTP</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_not_receive_code">Didn\'t received the code?&#160;<u><font color='#70A6F2'>Resend Code</font></u></string>
    <string name="enter_email">Please enter your email address</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign up</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="guest_continue">Continue as Guest</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="already_hav_account">Already have an account?&#160;<u><font color='#70A6F2'>Sign in</font></u></string>
    <string name="lbl_optional">Optional</string>
    <string name="referrer">Referrer</string>
    <string name="hint_number">Mobile Number</string>
    <string name="nationality">Nationality</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_messages">Messages</string>
    <string name="password_required">Password is required</string>
    <string name="password_donot_match">Passwords donot match</string>
    <string name="confirm_password_required">Confirm password is required</string>
    <string name="first_name_required">First name is required</string>
    <string name="last_name_required">Last name is required</string>
    <string name="email_required">Email is required</string>
    <string name="lbl_edit">Edit</string>
    <string name="email_invalid">Invalid email</string>
    <string name="error_general">Something went wrong. Please try again</string>
    <string name="lbl_no_internet">Check your internet connection.</string>
    <string name="welcome">WELCOME</string>
    <string name="lbl_publish">PUBLISH</string>
    <string name="create_review">Create Review</string>
    <string name="edit_review">Edit Review</string>
    <string name="enter_description">Enter Description</string>
    <string name="description"> Description</string>
    <string name="lbl_description"> Description cannot be empty.</string>
    <string name="lbl_text"> Text cannot be empty.</string>
    <string name="received"><u>Received</u></string>
    <string name="sent"><u>Sent</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="lbl_no_reviews">No reviews posted yet.</string>
    <string name="lbl_no_messages">No messages yet.</string>
    <string name="lbl_review">Reviews</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_language">Language</string>
    <string name="lbl_change_language">Change Language</string>
    <string name="edit_user_name">Edit User Name</string>
    <string name="save">Save</string>
    <string name="lbl_otp_sent">OTP is 123456</string>
    <string name="id">Review ID:</string>
    <string name="search_hint">Enter user name or ID</string>
    <string name="search_hint_message">Enter sender or receiver name</string>
    <string name="user_name">User Name:</string>
    <string name="description2">Description:</string>



</resources>