<?xml version="1.0" encoding="utf-8"?><!--<androidx.cardview.widget.CardView-->


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"

    android:background="@drawable/rounded_bottom_sheet"


    android:padding="16dp">

    <include
        android:id="@+id/spinner"
        layout="@layout/spinner"
        android:visibility="gone" />


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/muli"
        android:text="@string/create_review"
        android:textColor="@color/text_Color"
        android:textFontWeight="600"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_marginTop="20dp"
        android:background="#CDCDD0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/muli"
        android:text="@string/enter_description"
        android:textColor="@color/text_Color"
        android:textFontWeight="500"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <EditText
        android:id="@+id/edDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/ed_round_cornors"
        android:backgroundTint="#F0F0F0"
        android:fontFamily="@font/muli"
        android:gravity="top"
        android:hint="@string/description"
        android:inputType="textCapSentences|textMultiLine"
        android:lines="6"
        android:padding="20dp"
        android:paddingStart="20dp"

        android:scrollbars="vertical"
        android:textColor="@color/text_Color"
        android:textFontWeight="400"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeading" />

    <Button
        android:id="@+id/btSubmit"

        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:layout_margin="24dp"
        android:background="@drawable/bg_btn_blue"
        android:fontFamily="@font/muli"
        android:text="@string/lbl_publish"
        android:textAllCaps="true"
        android:textFontWeight="800"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edDescription" />


</androidx.constraintlayout.widget.ConstraintLayout><!--</androidx.cardview.widget.CardView>-->
