<?xml version="1.0" encoding="utf-8"?><!--<androidx.cardview.widget.CardView-->


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"

    android:background="@drawable/rounded_bottom_sheet"


    android:padding="16dp">

    <include
        android:id="@+id/spinner"
        layout="@layout/spinner"
        android:visibility="gone" />


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/muli"
        android:text="@string/edit_user_name"
        android:textColor="@color/colorDarkGrey"
        android:textFontWeight="600"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_marginTop="20dp"
        android:background="#CDCDD0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <EditText
            android:singleLine="true"
            android:id="@+id/edFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:hint="@string/first_name"
            android:maxLines="1"
            android:padding="5sp"
            android:textColor="@color/review_card_color"
            android:textSize="14dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--            <View-->
    <!--                android:id="@+id/viewFirstName"-->
    <!--                android:layout_width="0dp"-->
    <!--                android:layout_height="1.5dp"-->
    <!--                android:layout_marginStart="50dp"-->
    <!--                android:layout_marginEnd="50dp"-->
    <!--                android:background="@color/colorStroke"-->
    <!--                app:layout_constraintEnd_toEndOf="parent"-->
    <!--                app:layout_constraintStart_toStartOf="parent"-->
    <!--                app:layout_constraintTop_toBottomOf="@id/layoutFirstName" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutFirstName">

        <EditText
            android:singleLine="true"
            android:id="@+id/edLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:hint="@string/last_name"
            android:maxLines="1"
            android:padding="5sp"
            android:textColor="@color/review_card_color"
            android:textSize="14dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btSubmit"

        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:layout_margin="24dp"
        android:background="@drawable/bg_btn_blue"
        android:fontFamily="@font/muli"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textFontWeight="800"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutLastName" />


</androidx.constraintlayout.widget.ConstraintLayout><!--</androidx.cardview.widget.CardView>-->
