<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.registration.SignInActivity">

    <include
        android:id="@+id/layoutToolbar"
        layout="@layout/blue_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="180dp"
        android:layout_height="170dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutToolbar" />

    <TextView
        android:id="@+id/tvTagLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:fontFamily="@font/muli"
        android:text="@string/splash_tagline"
        android:textColor="@color/colorLightGrey"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="@id/ivLogo"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <TextView
        android:id="@+id/lblChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/lbl_change_password"
        android:textColor="@color/colorDarkGrey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tvTagLine"
        app:layout_constraintStart_toStartOf="@id/tvTagLine"
        app:layout_constraintTop_toBottomOf="@id/tvTagLine" />



        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPassword"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@null"
            android:fontFamily="@font/muli"
            android:hint="@string/password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:padding="5sp"
            android:textColor="@color/colorLightGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblChangePassword"/>


    <View
        android:id="@+id/viewPassword"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorStroke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edPassword" />



        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginTop="20dp"

            android:id="@+id/edConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@null"
            android:fontFamily="@font/muli"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"

            android:padding="5sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edPassword"
            android:textColor="@color/colorLightGrey" />


    <View
        android:id="@+id/viewConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorStroke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edConfirmPassword" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/bg_btn_yellow"
        android:foreground="?android:attr/selectableItemBackground"
        android:textAllCaps="false"
        android:textColor="@color/review_card_color"
        android:fontFamily="@font/muli"
        android:text="@string/change_password"

        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edConfirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>